receiver/force-app/main/receiver/objects/Visit_kpi__c/Visit_kpi__c.object-meta.xml
<CustomObject>
    <label>Visit kpi</label>
    <nameField>
        <displayFormat>vkpi-{0}</displayFormat>
        <label>Aux data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits kpi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>