receiver/force-app/main/receiver/objects/Visit_kpi__c/fields/Month_visited_groups__c.field-meta.xml
<CustomField>
    <fullName>Month_visited_groups__c</fullName>
    <label>Month visited groups</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>