receiver/force-app/main/receiver/objects/Visit_kpi__c/fields/Organization_url__c.field-meta.xml
<CustomField>
    <fullName>Organization_url__c</fullName>
    <label>Organization url</label>
    <length>80</length>
    <type>Text</type>
</CustomField>