receiver/force-app/main/receiver/objects/Visit_kpi__c/fields/Total_groups__c.field-meta.xml
<CustomField>
    <fullName>Total_groups__c</fullName>
    <label>Total groups</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>